# polyfit

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  demo.cpp  quadratic_demo.py  simpleCV.cpp
math/: CMakeLists.txt  polyfit.cpp  polyfit.hpp
maths/: polyfit.cpp  polyfit.hpp
